working on the exam service