@@ -16,11 +16,10 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-
 @Service
 @Transactional
 public class ExamServiceImpl implements ExamService {
-   @Autowired
+    @Autowired
     private ExamDao examDao;
 
     @Autowired
@@ -28,12 +27,13 @@ public class ExamServiceImpl implements ExamService {
 
     @Autowired
     private ProfessorDao professorDao;
+
     @Autowired
     private SalleDao salleDao;
-    @Autowired
-    private SalleAssignmentDao salleAssignmentDao;
+
     @Autowired
     private SurveillanceDao surveillanceDao;
+
     @Override
     public List<Exam> getAll() {
         return examDao.findAll();
@@ -41,15 +41,16 @@ public class ExamServiceImpl implements ExamService {
 
     @Override
     public ExamResponseDto processForm1(ExamForm1Dto form) {
-        Course course =courseDao.getCourseByTitre(form.getCourse());
-        Exam existingExam=examDao.findAllByDateAndSemestereAndSessionAndCourseAndTypeExamAndStartingHour
+        Course course = courseDao.getCourseByTitre(form.getCourse());
+        Exam existingExam = examDao.findAllByDateAndSemestereAndSessionAndCourseAndTypeExamAndStartingHour
                 (form.getDate(), Semester.valueOf(form.getSemestere())
-                ,Session.valueOf(form.getSession())
-                ,course,TypeExam.valueOf(form.getTypeExam())
-                ,form.getStarting_hour());
-        int duration=course.getTypeElement()==TypeElement.ELEMENT ? 90 : 120;
-        return existingExam==null ?  new ExamResponseDto(form,duration,course.getNbrStudents()) :null ;
+                        , Session.valueOf(form.getSession())
+                        , course, TypeExam.valueOf(form.getTypeExam())
+                        , form.getStarting_hour());
+        int duration = course.getTypeElement() == TypeElement.ELEMENT ? 90 : 120;
+        return existingExam == null ? new ExamResponseDto(form, duration, course.getNbrStudents()) : null;
     }
+
     @Override
     public Exam processForm2(ExamForm2Dto form) {
         List<Exam> exams = examDao.findAllByDateAndStartingHour(
@@ -57,20 +58,29 @@ public class ExamServiceImpl implements ExamService {
                 form.getResponseDto().getExamForm1Dto().getStarting_hour()
         );
 
-        List<Salle> salles = getAvailableSalles(exams);
+        List<Salle> salles = getAvailableSalles(exams,form.getResponseDto().getNbrStudents());
 
-        Surveillance sur = new Surveillance();
-        sur = setSalleToSurveillance(sur, salles, form);
-
-        int totalSurveillants = form.getNbrOfSurv() * sur.getSalles().size();
+        int totalSurveillants = form.getNbrOfSurv() * salles.size();
         List<Professor> availableProfs = getAvailableProfs(exams, totalSurveillants);
 
-        List<List<Professor>> groupedProfessors =form.getRandom()?
-                groupProfessors(availableProfs,form.getNbrOfSurv()) :
-                groupProfessorsByGroup(availableProfs, form.getNbrOfSurv());
+        List<List<Professor>> groupedProfessors;
+        if (form.getRandom()) {
+            groupedProfessors = groupProfessorsRandomly(availableProfs, form.getNbrOfSurv(), salles.size());
+        } else {
+            groupedProfessors = groupProfessorsByGroup(availableProfs, form.getNbrOfSurv(), salles.size());
+        }
+        Admin available_Admin=getAvailableAdmin();
 
-        List<SalleAssignment> assignments = assignProfessorsToSalles(salles, groupedProfessors, form.getNbrOfSurv());
+        // Create surveillance objects with assigned salles and professors
+        List<Surveillance> surveillances = new ArrayList<>();
+        for (int i = 0; i < salles.size(); i++) {
+            Surveillance surveillance = new Surveillance();
+            surveillance.setSalle(salles.get(i));
+            surveillance.setSurveil_profs(groupedProfessors.get(i));
+            surveillances.add(surveillance);
+        }
 
+        // Create exam object with assigned surveillances
         Semester semester = Semester.valueOf(form.getResponseDto().getExamForm1Dto().getSemestere());
         Session session = Session.valueOf(form.getResponseDto().getExamForm1Dto().getSession());
         Course course = courseDao.getCourseByTitre(form.getResponseDto().getExamForm1Dto().getCourse());
@@ -78,138 +88,104 @@ public class ExamServiceImpl implements ExamService {
         LocalDate date = form.getResponseDto().getExamForm1Dto().getDate();
         LocalDateTime startingTime = form.getResponseDto().getExamForm1Dto().getStarting_hour();
         int plannedDuration = form.getPlannedDuration();
-        Exam newExam = new Exam(semester, session, course, typeExam, date, startingTime, plannedDuration, sur, assignments);
+        Exam newExam = new Exam(semester, session, course, typeExam, date, startingTime, plannedDuration);
+        newExam.setExam_surveill(surveillances);
         newExam = examDao.save(newExam);
-        for (SalleAssignment assignment : assignments) {
-            assignment.setExam(newExam); // Set the exam property of the SalleAssignment object
-            salleAssignmentDao.save(assignment);
-        }
-        if (sur.getExams() == null) {
-            sur.setExams(new ArrayList<>());
-        }
-        sur.getExams().add(newExam);
-        surveillanceDao.save(sur);
-        surveillanceDao.save(sur);
         return newExam;
     }
 
-
-    @Override
-    public Exam processForm3(Exam exam) {
-        return null;
-    }
-    public List<Salle> getAvailableSalles(List<Exam> exams) {
+    private List<Salle> getAvailableSalles(List<Exam> exams, int nbrStudents) {
         List<Salle> allSalles = salleDao.findAll();
         List<Salle> surveilSalles = new ArrayList<>();
 
         for (Exam exam : exams) {
-            surveilSalles.addAll(exam.getExam_surveill().getSalles());
+            surveilSalles.addAll(exam.getExam_surveill().stream().map(Surveillance::getSalle).collect(Collectors.toList()));
         }
 
-        return allSalles.stream()
-                .filter(salle -> !surveilSalles.contains(salle))
-                .collect(Collectors.toList());
+        List<Salle> availableSalles = allSalles.stream()
+                .filter(salle ->!surveilSalles.contains(salle))
+                .toList();
+
+        List<Salle> minSalles = new ArrayList<>();
+        int totalCapacity = 0;
+
+        for (Salle salle : availableSalles) {
+            totalCapacity += salle.getCapacity();
+            minSalles.add(salle);
+            if (totalCapacity >= nbrStudents) {
+                break;
+            }
+        }
+
+        return minSalles;
     }
 
-    public List<Professor> getAvailableProfs(List<Exam> exams, int totalSurveillants) {
+    private List<Professor> getAvailableProfs(List<Exam> exams, int totalSurveillants) {
         List<Professor> allProfs = professorDao.findAll();
         List<Professor> surveilProfs = new ArrayList<>();
 
         for (Exam exam : exams) {
-            surveilProfs.addAll(exam.getExam_surveill().getSurveil_profs());
+            surveilProfs.addAll(exam.getExam_surveill().
+                    stream().
+                    flatMap(surveillance -> surveillance.getSurveil_profs().stream())
+                    .toList());
         }
 
-        return allProfs.stream()
+        List<Professor> availableProfs = allProfs.stream()
                 .filter(prof -> !surveilProfs.contains(prof))
-                .limit(totalSurveillants)
                 .collect(Collectors.toList());
-    }
 
-    public Surveillance setSalleToSurveillance(Surveillance surv, List<Salle> salles, ExamForm2Dto form) {
-        int totalCapacity = 0;
-        List<Salle> assignedSalles = new ArrayList<>();
-
-        for (Salle salle : salles) {
-            if (totalCapacity >= form.getResponseDto().getNbrStudents()) {
-                break;
-            }
-            assignedSalles.add(salle);
-            totalCapacity += salle.getCapacity();
+        if (availableProfs.size() < totalSurveillants) {
+            throw new IllegalStateException("Il n'y a pas assez de professeurs disponibles pour cette épreuve.");
         }
 
-        surv.setSalles(assignedSalles);
-        return surv;
+        return availableProfs;
     }
 
-    public List<List<Professor>> groupProfessorsByGroup(List<Professor> professors, int n) {
+    private List<List<Professor>> groupProfessorsRandomly(List<Professor> availableProfs, int nbrOfSurv, int nbrOfSalles) {
+        List<List<Professor>> groupedProfessors = new ArrayList<>();
+
+        int index = 0;
+        for (int i = 0; i < nbrOfSalles; i++) {
+            List<Professor> groupedProfs = new ArrayList<>();
+            for (int j = 0; j < nbrOfSurv && index < availableProfs.size(); j++) {
+                groupedProfs.add(availableProfs.get(index));
+                index++;
+            }
+            groupedProfessors.add(groupedProfs);
+        }
+
+        return groupedProfessors;
+    }
+
+    public List<List<Professor>> groupProfessorsByGroup(List<Professor> professors, int n, int nbrOfSalles) {
         Map<String, List<Professor>> groupedProfessors = professors.stream()
                 .collect(Collectors.groupingBy(professor -> professor.getGroup().getName()));
 
         List<List<Professor>> result = new ArrayList<>();
 
+        int count = 0;
         for (Map.Entry<String, List<Professor>> entry : groupedProfessors.entrySet()) {
             List<Professor> groupMembers = entry.getValue();
             for (int i = 0; i < groupMembers.size(); i += n) {
                 int end = Math.min(i + n, groupMembers.size());
                 result.add(new ArrayList<>(groupMembers.subList(i, end)));
+                count++;
+                if (count == nbrOfSalles) {
+                    break;
+                }
             }
+            if (count == nbrOfSalles) {
+                break;
+            }
+        }
+
+        if (result.size() < nbrOfSalles) {
+            List<Professor> remainingProfs = new ArrayList<>(professors);
+            remainingProfs.removeAll(result.stream().flatMap(List::stream).toList());
+            result.addAll(groupProfessorsRandomly(remainingProfs, n, nbrOfSalles - result.size()));
         }
 
         return result;
-    }
-    public static List<List<Professor>> groupProfessors(List<Professor> professors, int n) {
-        List<List<Professor>> result = new ArrayList<>();
-
-        for (int i = 0; i < professors.size(); i += n) {
-            int end = Math.min(i + n, professors.size());
-            result.add(new ArrayList<>(professors.subList(i, end)));
-        }
-
-        return result;
-    }
-
-    public List<SalleAssignment> assignProfessorsToSalles(List<Salle> salles, List<List<Professor>> groupedProfessors, int nbrOfSurv) {
-        List<SalleAssignment> assignments = new ArrayList<>();
-        int salleIndex = 0;
-
-        // Assign professors from the same group to each salle
-        for (List<Professor> professorGroup : groupedProfessors) {
-            while (professorGroup.size() >= nbrOfSurv && salleIndex < salles.size()) {
-                Salle salle = salles.get(salleIndex++);
-                List<Professor> assignedProfs = new ArrayList<>(professorGroup.subList(0, nbrOfSurv));
-                professorGroup.subList(0, nbrOfSurv).clear();
-
-                SalleAssignment assignment = new SalleAssignment();
-                assignment.setSalle(salle);
-                assignment.setProfessors(assignedProfs);
-                assignments.add(assignment);
-
-                // Add the assignment to each professor's package
-                assignment.getProfessors().forEach(prof -> prof.getAssignments().add(assignment));
-            }
-        }
-
-        // If there are still salles left, assign any available professors
-        List<Professor> remainingProfs = groupedProfessors.stream()
-                .flatMap(List::stream)
-                .collect(Collectors.toList());
-
-        for (int i = salleIndex; i < salles.size(); i++) {
-            Salle salle = salles.get(i);
-            List<Professor> assignedProfs = new ArrayList<>();
-            for (int j = 0; j < nbrOfSurv &&!remainingProfs.isEmpty(); j++) {
-                assignedProfs.add(remainingProfs.remove(0));
-            }
-
-            SalleAssignment assignment = new SalleAssignment();
-            assignment.setSalle(salle);
-            assignment.setProfessors(assignedProfs);
-            assignments.add(assignment);
-
-            // Add the assignment to each professor's package
-            assignment.getProfessors().forEach(prof -> prof.getAssignments().add(assignment));
-        }
-
-        return assignments;
     }
 }
